# python-sh3001

./: Readme.md  install.py  pyproject.toml  setup.py
docs/: auto-rotator.md
sh3001/: __init__.py  i2c.py  sh3001.py
src/sh3001/: setup.py
src/sh3001/sh3001/: __init__.py  filedb.py  sh3001.py
