[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sh3001"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for 6 axis module SH3001"
readme = "Readme.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
version = "0.0.1"

dependencies = [
  'smbus',
]

[tool.setuptools]
packages = ["sh3001"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/python-sh3001"
"Bug Tracker" = "https://github.com/sunfounder/python-sh3001/issues"
